with partial stretch

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 						<div class="tabs-link" data-tab="2">Tab 2</div>
 						<div class="tabs-link" data-tab="3">Tab 3</div>
 						<div class="tabs-link" data-tab="4">Tab 4</div>
+						<div class="tabs-link" data-tab="5">Tab 5</div>
+						<div class="tabs-link" data-tab="6">Tab 6</div>
 					</div>
 					<div class="tabs-items">
 						<div class="tabs-item tabs-item-selected" data-tab="1">
@@ -72,9 +74,22 @@
 								that this has already happened.
 							</div>
 						</div>
+						<div class="tabs-item" data-tab="5">
+							<div class="tabs-item-title">Quote 5</div>
+							<div class="tabs-item-description">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima laudantium expedita praesentium aliquam dolor, adipisci nemo veritatis possimus recusandae asperiores debitis iusto repudiandae facilis quos sint labore ratione deserunt nulla.
+							</div>
+						</div>
+						<div class="tabs-item" data-tab="6">
+							<div class="tabs-item-title">Quote 6</div>
+							<div class="tabs-item-description">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam impedit quis obcaecati amet, beatae iste, recusandae odio aspernatur blanditiis saepe tenetur sunt voluptate accusamus at excepturi atque cupiditate, ipsum sequi.
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</body>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
 </html>
